--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,10 @@
     },
     "require": {
         "php": "^7.1",
-        "symfony/symfony": "^3.4"
+        "symfony/dependency-injection": "^4.2",
+        "symfony/filesystem": "^4.2",
+        "symfony/finder": "^4.2",
+        "symfony/http-kernel": "^4.2"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~2.7.1",
