--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,10 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.15",
-        "phpunit/phpunit": "^6.4"
+        "phpunit/phpunit": "^8.3.5"
     },
     "scripts": {
+        "test": "phpunit -v -c phpunit.xml",
         "fix-cs": "@php ./vendor/bin/php-cs-fixer fix -v --show-progress=estimating"
     },
     "extra": {
