--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "symfony/symfony": "^3.4"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "~2.7.1",
+        "friendsofphp/php-cs-fixer": "^2.15",
         "phpunit/phpunit": "^6.4"
     },
     "scripts": {
