--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
     "autoload": {
         "psr-4": {
             "EzSystems\\EzPlatformCoreBundle\\": "src/EzPlatformCoreBundle/bundle/",
-            "EzSystems\\EzPlatformEncoreBundle\\": "src/EzPlatformEncoreBundle/bundle/"
+            "EzSystems\\EzPlatformEncoreBundle\\": "src/EzPlatformEncoreBundle/bundle/",
+            "EzSystems\\EzPlatformTemplating\\": "src/EzPlatformTemplatingBundle/lib/",
+            "EzSystems\\EzPlatformTemplatingBundle\\": "src/EzPlatformTemplatingBundle/bundle/"
         }
     },
     "autoload-dev": {
@@ -20,13 +22,17 @@
             "EzSystems\\Tests\\EzPlatformCoreBundle\\": "tests/EzPlatformCoreBundle/bundle/"
         }
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php": "^7.3",
         "symfony/config": "^4.3",
         "symfony/dependency-injection": "^4.3",
         "symfony/filesystem": "^4.3",
         "symfony/finder": "^4.3",
-        "symfony/http-kernel": "^4.3"
+        "symfony/http-kernel": "^4.3",
+        "symfony/twig-bundle": "^4.3",
+        "ezsystems/ezpublish-kernel": "^8.0@dev"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.15",
