--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.15",
-        "phpunit/phpunit": "^8.3.5"
+        "phpunit/phpunit": "^8.3.5",
+        "ezsystems/ezplatform-code-style": "^0.1.0"
     },
     "scripts": {
         "test": "phpunit -v -c phpunit.xml",
