--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "require": {
         "php": "^7.3",
         "ezsystems/ezplatform-kernel": "^1.2@dev",
+        "symfony/asset": "^5.0",
         "symfony/config": "^5.0",
         "symfony/dependency-injection": "^5.0",
         "symfony/filesystem": "^5.0",
