--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
     "require-dev": {
         "ezsystems/ezplatform-code-style": "^1.0@dev",
         "friendsofphp/php-cs-fixer": "^2.15",
-        "phpunit/phpunit": "^8.3.5"
+        "phpunit/phpunit": "^8.3.5",
+        "matthiasnoback/symfony-dependency-injection-test": "^4.2"
     },
     "scripts": {
         "test": "phpunit -v -c phpunit.xml",
