--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "symfony/symfony": "^3.4"
     },
     "require-dev": {
-        "ezsystems/ezplatform-code-style": "^1.0@dev",
+        "ezsystems/ezplatform-code-style": "^1.0",
         "friendsofphp/php-cs-fixer": "^2.15",
         "phpunit/phpunit": "^8.3.5"
     },
