--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
     "require": {
         "php": "^7.3",
-        "ezsystems/ezplatform-kernel": "^2.0dev",
+        "ezsystems/ezplatform-kernel": "^2.0@dev",
         "symfony/asset": "^5.3.0",
         "symfony/config": "^5.3.0",
         "symfony/dependency-injection": "^5.3.0",
