--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         }
     },
     "require": {
-        "php": "^7.3",
+        "php": "^7.3 || ^8.0",
         "ezsystems/ezplatform-kernel": "^1.3@dev",
         "symfony/asset": "^5.3.0",
         "symfony/config": "^5.3.0",
