--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         }
     },
     "require": {
-        "php": "^7.3",
+        "php": "^7.3 || ^8.0",
         "ezsystems/ezplatform-kernel": "^1.3@dev",
         "symfony/asset": "^5.3.0",
         "symfony/config": "^5.3.0",
@@ -34,6 +34,7 @@
         "symfony/http-kernel": "^5.3.0"
     },
     "require-dev": {
+        "ezsystems/doctrine-dbal-schema": "^1.0@dev",
         "ezsystems/ezplatform-code-style": "^1.0@dev",
         "friendsofphp/php-cs-fixer": "^2.15",
         "phpunit/phpunit": "^8.3.5",
