--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
     "require": {
         "php": "^7.3 || ^8.0",
-        "ezsystems/ezplatform-kernel": "^1.3@dev",
+        "ezsystems/ezplatform-kernel": "^1.3",
         "symfony/asset": "^5.3.0",
         "symfony/config": "^5.3.0",
         "symfony/dependency-injection": "^5.3.0",
@@ -34,8 +34,8 @@
         "symfony/http-kernel": "^5.3.0"
     },
     "require-dev": {
-        "ezsystems/doctrine-dbal-schema": "^1.0@dev",
-        "ezsystems/ezplatform-code-style": "^1.0@dev",
+        "ezsystems/doctrine-dbal-schema": "^1.0",
+        "ezsystems/ezplatform-code-style": "^1.0",
         "friendsofphp/php-cs-fixer": "^2.15",
         "phpunit/phpunit": "^8.3.5",
         "matthiasnoback/symfony-dependency-injection-test": "^4.2"
